# git-branch-cleaner

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  repos.json.example
.github/workflows/: ci.yml
git_branch_cleaner/: cli.py
src/git_branch_cleaner/: __main__.py  client.py  ui.py
